--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@ $font-family-secondary: "Poppins", sans-serif;
 $primary-color: rgb(17, 17, 17, 1);
 $secondary-color: rgb(255, 255, 255, 1);
 $tertiary-color : rgba(255, 255, 255, 0.15);
+$extra-color : rgba(255, 255, 255, 0.1);
 $subColor: rgba(255, 255, 255, 0.6);
 $innerColor: rgba(255, 255, 255, 0.8);
 
