--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #111111; 
+  background-color: #111111;
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
 }
